remove _index.md and edit index.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <meta name="keywords" content="" />
 
 
-<meta property="og:title" content="Purva Thakre Blog" />
+<meta property="og:title" content="Purva Thakre" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://purva-thakre.github.io/" />
@@ -21,7 +21,7 @@
 
 
 <meta name="twitter:card" content="summary"/>
-<meta name="twitter:title" content="Purva Thakre Blog"/>
+<meta name="twitter:title" content="Purva Thakre"/>
 <meta name="twitter:description" content=""/>
 
 
@@ -30,7 +30,7 @@
 <meta itemprop="description" content="">
 <meta name="referrer" content="no-referrer-when-downgrade" />
 
-  <link rel="alternate" type="application/rss+xml" href="https://purva-thakre.github.io/index.xml" title="Purva Thakre Blog" />
+  <link rel="alternate" type="application/rss+xml" href="https://purva-thakre.github.io/index.xml" title="Purva Thakre" />
   <style>
   :root {
       --width: 720px;
@@ -190,17 +190,17 @@
 
 <body>
   <header><a href="/" class="title">
-  <h2>Purva Thakre Blog</h2>
+  <h2>Purva Thakre</h2>
 </a>
 <nav><a href="/">Home</a>
-
+    <nav><a href="/">About</a>
 
 <a href="/blog">Blog</a>
 
 </nav>
 </header>
   <main>
-
+    🚧 Currently under construction 🚧
 
   </main>
   <footer>Made with <a href="https://github.com/janraasch/hugo-bearblog/">Hugo ʕ•ᴥ•ʔ Bear</a>
